--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,100 @@
-h1 {
-	background-color: #4aaaa5;
-	color: white;
+* {
+	box-sizing: border-box;
+}
+body {
+	background-image: url("../images/random_grey_variations.png");
+	width: 960px;
+	margin: 0;
+	padding: 0;
+	line-height: 150%;
+
+}
+
+/*#header {
+	width: 100%;
+	background-color: white;
+	position: fixed;
 	padding: 20px;
+	top: 0px;
+}*/
+
+#header {
+	width: 100%;
+	background-color: white;
+	overflow: hidden;
+	position: fixed;
+	top: 0px;
+}
+
+#links {
+	width: 200px;
+	float: right;
+	
+}
+
+#imgur {
+	float: left;
+	margin-right: 10px;
+}
+#name {
+	background-color:#4aaaa5;
+	padding: 10px;
+	color: white;
+	width: 200px;
+	float: left;
+	margin-left: 100px;
+
+}
+h1 {
+	color: white;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	
+}
+
+#aboutme {
+	width: 650px;
+	background-color: white;
+	float: left;
+	margin-left: 60px;
+	border: solid 1px grey;
+	margin-top: 100px;
 }
 h2 {
 	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 }
+
+#mainbody {
+	margin: 15px;
+
+}
+#connectwithme {
+	
+	background-color: white;
+	float: left;
+	margin: 0;
+	border: solid 1px grey;
+	margin-top: 100px;
+}
+
+#sidebar {
+	margin: 10px;
+}
+
 h3 {
 	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 h4 {
 	background-color: #4aaaa5;
 	color: white;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+
+}
+h5 {
+	color: #777777;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	display: inline;
 }
 #submit {
 	background-color: #4aaaa5;
@@ -21,4 +104,21 @@ h4 {
 	padding-right: 20px;
 	padding-left: 20px;
 
+}
+p {
+	color: #777777;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+form {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+h6 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #777777;
+	text-align: center;
+}
+
+#footer {
+	bottom: 0px;
 }
