--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,7 @@
 }
 body {
 	background-image: url("../images/random_grey_variations.png");
-	width: 960px;
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 	line-height: 150%;
 
@@ -18,32 +17,32 @@ body {
 	top: 0px;
 }*/
 
-#header {
+.header {
 	width: 100%;
 	background-color: white;
 	overflow: hidden;
-	position: fixed;
 	top: 0px;
 }
 
-#links {
+.links {
 	width: 200px;
 	float: right;
-	
+	color: #777777;
+	margin-top: 50px;
 }
 
-#imgur {
+.imgur {
 	float: left;
 	margin-right: 10px;
 }
-#name {
+.name {
 	background-color:#4aaaa5;
 	padding: 10px;
 	color: white;
 	width: 200px;
 	float: left;
 	margin-left: 100px;
-
+	text-align: center;
 }
 h1 {
 	color: white;
@@ -51,24 +50,26 @@ h1 {
 	
 }
 
-#aboutme {
+.aboutme {
 	width: 650px;
 	background-color: white;
 	float: left;
 	margin-left: 60px;
 	border: solid 1px grey;
 	margin-top: 100px;
+	margin-right: 40px;
 }
 h2 {
 	color: #4aaaa5;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	margin-left: 20px;
 }
 
-#mainbody {
+.mainbody {
 	margin: 15px;
 
 }
-#connectwithme {
+.connectwithme {
 	
 	background-color: white;
 	float: left;
@@ -77,7 +78,7 @@ h2 {
 	margin-top: 100px;
 }
 
-#sidebar {
+.sidebar {
 	margin: 10px;
 }
 
@@ -91,18 +92,6 @@ h4 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 
 }
-h5 {
-	color: #777777;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	display: inline;
-}
-#submit {
-	background-color: #4aaaa5;
-	color: white;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-right: 20px;
-	padding-left: 20px;
 
 }
 p {
@@ -111,6 +100,8 @@ p {
 }
 form {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	margin: 20px;
+	color: #777777;
 }
 
 h6 {
@@ -119,6 +110,31 @@ h6 {
 	text-align: center;
 }
 
-#footer {
-	bottom: 0px;
+.footer {
+	background-color: darkgrey;
+	text-align: center;
+	width: 100%;
+	border-top: solid 6px  #4aaaa5;
+	position: fixed;
+	bottom: 0;
 }
+a {
+	color: #777777;
+}
+input {
+	width: 100%;
+}
+.submit {
+	background-color: #4aaaa5;
+	color: white;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-right: 20px;
+	padding-left: 20px;
+	margin-top: 20px;
+	width: 15%;
+	border: none;
+	}
+	.message {
+		padding: 45px;
+	}
