--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+	height: 100%;
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -6,6 +10,8 @@ body {
 	margin: 0 auto;
 	padding: 0;
 	line-height: 150%;
+	
+	position: relative;
 
 }
 
@@ -16,6 +22,10 @@ body {
 	padding: 20px;
 	top: 0px;
 }*/
+
+.header::after {
+	clear: both;
+}
 
 .header {
 	width: 100%;
@@ -50,6 +60,10 @@ h1 {
 	
 }
 
+.aboutme::after {
+	clear: both;
+}
+
 .aboutme {
 	width: 650px;
 	background-color: white;
@@ -78,6 +92,9 @@ h2 {
 	margin-top: 100px;
 }
 
+.connectwithme::after {
+	clear: both;
+}
 .sidebar {
 	margin: 10px;
 }
@@ -110,13 +127,17 @@ h6 {
 	text-align: center;
 }
 
+.footer::after {
+	clear: both;
+}
+
 .footer {
 	background-color: darkgrey;
 	text-align: center;
 	width: 100%;
 	border-top: solid 6px  #4aaaa5;
-	position: fixed;
-	bottom: 0;
+	position: absolute;
+	margin-top: 100%;
 }
 a {
 	color: #777777;
